objects/Bicycle__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Haro</fullName>
                </value>
                <value>
                    <fullName>Mongoose</fullName>
                </value>
                <value>
                    <fullName>Trek</fullName>
                </value>
                <value>
                    <fullName>Specialized</fullName>
                </value>
                <value>
                    <fullName>Scott</fullName>
                </value>
                <value>
                    <fullName>Giant</fullName>
                </value>
                <value>
                    <fullName>Santa Cruz</fullName>
                </value>
                <value>
                    <fullName>Merida</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <description>Enter the current budget for bicycle purchase.</description>
        <label>Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Power__c</fullName>
        <label>Power</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Electric</fullName>
                </value>
                <value>
                    <fullName>Gas</fullName>
                </value>
                <value>
                    <fullName>Battery</fullName>
                    <isActive>false</isActive>
                    <label>Battery</label>
                </value>
                <value>
                    <fullName>Natural Gas</fullName>
                    <isActive>false</isActive>
                    <label>Natural Gas</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <description>When was the bike purchased?</description>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tires__c</fullName>
        <complianceGroup>GDPR</complianceGroup>
        <description>What type of tires does the bike have?</description>
        <label>Tires</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All-terrain</fullName>
                </value>
                <value>
                    <fullName>Mountain</fullName>
                </value>
                <value>
                    <fullName>Road</fullName>
                </value>
                <value>
                    <fullName>Snow</fullName>
                </value>
                <value>
                    <fullName>Water</fullName>
                    <isActive>false</isActive>
                    <label>Water</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BMX</fullName>
                </value>
                <value>
                    <fullName>Mountain</fullName>
                </value>
                <value>
                    <fullName>Road</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Bicycle</label>
    <nameField>
        <label>Bicycle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bicycles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>